fix: position of fixed buttons to bottom on mobile

--- a/apps/platform-app/src/app/[locale]/(auth)/(components)/HamburgerMenuMobileBtn/HamburgerMenuMobileBtn.module.scss
+++ b/apps/platform-app/src/app/[locale]/(auth)/(components)/HamburgerMenuMobileBtn/HamburgerMenuMobileBtn.module.scss
@@ -62,6 +62,7 @@
   align-items: center;
   gap: $spacing-3;
   z-index: 1001;
+  margin-bottom: -530px;
 
   button {
     width: auto;
